# Tucil2_13524041_13524130

./: CMakeLists.txt  README.md  import_obj.py
src/: import_obj.py  voxelgenerator.cpp
src/include/: geometry.hpp  octree.hpp  renderer.hpp
